--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,7 @@
             "css": [
                 "assets/css/style.css"
             ],
-            "run_at": "document_end"
+            "run_at": "document_start"
         }
     ],
     "web_accessible_resources": [
