--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,42 @@
 {
-    "manifest_version": 3,
-    "name": "Score Display",
-    "version": "1.0",
-    "description": "Display test scores on lms system.",
-    "action": {
-        "default_icon": {
-            "16": "assets/icons/icon16.png",
-            "32": "assets/icons/icon32.png",
-            "128": "assets/icons/icon128.png"
-        }
-    },
-    "permissions": [
-        "activeTab",
-        "tabs",
-        "scripting",
-        "storage",
-        "clipboardWrite",
-        "clipboardRead",
-        "background"
-    ],
-    "content_scripts": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "js": [
-                "assets/js/content.js"
-            ],
-            "css": [
-                "assets/css/style.css"
-            ],
-            "run_at": "document_start"
-        }
-    ],
-    "web_accessible_resources": [
-        {
-            "resources": [
-                "assets/js/injected.js"
-            ],
-            "matches": [
-                "<all_urls>"
-            ]
-        }
-    ],
-    "icons": {
-        "16": "assets/icons/icon16.png",
-        "32": "assets/icons/icon32.png",
-        "128": "assets/icons/icon128.png"
+  "manifest_version": 3,
+  "name": "Score Display",
+  "version": "1.0",
+  "description": "Display test scores on lms system.",
+  "action": {
+    "default_popup": "html/popup.html",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "32": "assets/icons/icon32.png",
+      "128": "assets/icons/icon128.png"
     }
+  },
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "scripting",
+    "storage",
+    "clipboardWrite",
+    "clipboardRead",
+    "background"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["assets/js/content.js"],
+      "css": ["assets/css/style.css"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["assets/js/injected.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "128": "assets/icons/icon128.png"
+  }
 }
